js/js.translator/testData/incremental/invalidation/openClassWithInternalField/lib1/l1.2.kt
fun testProp(a: A): Int {
    return 2
}

fun testFunc(a: A): Int {
    return 2
}
